publish: Move contracts section out
generated from commit 926e9bda88264b42aae0555a72101e0fc30d3067

--- a/index.html
+++ b/index.html
@@ -265,9 +265,6 @@
                   <li>
                     <a href="#pairs" class="toc-h2 toc-link" data-title="pairs">Pairs</a>
                   </li>
-                  <li>
-                    <a href="#contracts" class="toc-h2 toc-link" data-title="contracts">Contracts</a>
-                  </li>
               </ul>
           </li>
           <li>
@@ -364,6 +361,14 @@
           </li>
           <li>
             <a href="#supported-assets" class="toc-h1 toc-link" data-title="supported-assets">Supported Assets</a>
+          </li>
+          <li>
+            <a href="#contracts" class="toc-h1 toc-link" data-title="contracts">Contracts</a>
+              <ul class="toc-list-h2">
+                  <li>
+                    <a href="#list-contracts" class="toc-h2 toc-link" data-title="list-contracts">List contracts</a>
+                  </li>
+              </ul>
           </li>
           <li>
             <a href="#errors" class="toc-h1 toc-link" data-title="errors">Errors</a>
@@ -704,23 +709,6 @@ that is being bought or sold, and <code>base</code> is the base currency for the
 <td>Provides pairs for these base symbols. Possible values are <code>NEO, GAS, SWTH, USD</code>.</td>
 </tr>
 </tbody></table>
-<h2 id='contracts'>Contracts</h2>
-<blockquote>
-<p>Example response</p>
-</blockquote>
-<pre class="highlight javascript"><code><span class="p">{</span>
-  <span class="s2">"NEO"</span><span class="p">:</span>
-  <span class="p">{</span>
-    <span class="s2">"V1"</span><span class="p">:</span> <span class="s2">"0ec5712e0f7c63e4b0fea31029a28cea5e9d551f"</span><span class="p">,</span>
-    <span class="s2">"V1_5"</span><span class="p">:</span> <span class="s2">"c41d8b0c30252ce7e8b6d95e9ce13fdd68d2a5a8"</span><span class="p">,</span>
-    <span class="s2">"V2"</span><span class="p">:</span> <span class="s2">"48756743d524af03aa75729e911651ffd3cbe7d8"</span>
-  <span class="p">}</span>
-<span class="p">}</span>
-
-</code></pre>
-<p>Returns updated hashes of contracts deployed by Switcheo.</p>
-<h3 id='http-request-5'>HTTP Request</h3>
-<p><code>GET /v2/tickers/contracts</code></p>
 <h1 id='offers'>Offers</h1>
 <p>An offer represents an open order that rests on the <a href="https://switcheo.exchange">Switcheo Exchange</a> offer book.</p>
 
@@ -750,7 +738,7 @@ that is being bought or sold, and <code>base</code> is the base currency for the
  <span class="p">]</span>
 </code></pre>
 <p>Retrieves the best 70 offers (per side) on the offer book.</p>
-<h3 id='http-request-6'>HTTP Request</h3>
+<h3 id='http-request-5'>HTTP Request</h3>
 <p><code>GET /v2/offers</code></p>
 <h3 id='request-parameters-4'>Request Parameters</h3>
 <table><thead>
@@ -853,7 +841,7 @@ that is being bought or sold, and <code>base</code> is the base currency for the
 <span class="p">]</span>
 </code></pre>
 <p>Retrieves trades that have already occurred on Switcheo Exchange filtered by the request parameters.</p>
-<h3 id='http-request-7'>HTTP Request</h3>
+<h3 id='http-request-6'>HTTP Request</h3>
 <p><code>GET /v2/trades</code></p>
 <h3 id='request-parameters-5'>Request Parameters</h3>
 <table><thead>
@@ -1022,7 +1010,7 @@ To be able to make a deposit, sufficient funds are required in the depositing wa
 <aside class="notice">
   IMPORTANT: After calling this endpoint, the Execute Deposit endpoint has to be called for the deposit to be executed.
 </aside>
-<h3 id='http-request-8'>HTTP Request</h3>
+<h3 id='http-request-7'>HTTP Request</h3>
 <p><code>POST /v2/deposits</code></p>
 <h3 id='request-parameters-6'>Request Parameters</h3>
 <table><thead>
@@ -1103,7 +1091,7 @@ you will receive a response which requires additional signing.</p>
 
 <p>Note that a <code>sha256</code> parameter is provided for convenience to be used directly as part of the ECDSA signature process.
  <em>In production mode, this should be recalculated for additional security.</em>  </p>
-<h3 id='http-request-9'>HTTP Request</h3>
+<h3 id='http-request-8'>HTTP Request</h3>
 <p><code>POST /v2/deposits/:id/broadcast</code></p>
 <h3 id='request-parameters-7'>Request Parameters</h3>
 <table><thead>
@@ -1181,7 +1169,7 @@ To be able to make a withdrawal, sufficient funds are required in the contract b
 <aside class="notice">
   IMPORTANT: After calling this endpoint, the Execute Withdrawal endpoint has to be called for the withdrawal to be executed.
 </aside>
-<h3 id='http-request-10'>HTTP Request</h3>
+<h3 id='http-request-9'>HTTP Request</h3>
 <p><code>POST /v2/withdrawals</code></p>
 <h3 id='request-parameters-8'>Request Parameters</h3>
 <table><thead>
@@ -1278,7 +1266,7 @@ To be able to make a withdrawal, sufficient funds are required in the contract b
 <p>This is the second endpoint required to execute a withdrawal.
 After using the <a href="#create-withdrawal">Create Withdrawal</a> endpoint,
 you will receive a response which requires additional signing.</p>
-<h3 id='http-request-11'>HTTP Request</h3>
+<h3 id='http-request-10'>HTTP Request</h3>
 <p><code>POST /v2/withdrawals/:id/broadcast</code></p>
 <h3 id='request-parameters-9'>Request Parameters</h3>
 <table><thead>
@@ -1647,7 +1635,7 @@ you will receive a response which requires additional signing.</p>
 </span><span class="p">]</span><span class="w">
 </span></code></pre>
 <p>Retrieves orders from a specific address filtered by the given parameters.</p>
-<h3 id='http-request-12'>HTTP Request</h3>
+<h3 id='http-request-11'>HTTP Request</h3>
 <p><code>GET /v2/orders</code></p>
 <h3 id='request-parameters-10'>Request Parameters</h3>
 <table><thead>
@@ -1687,7 +1675,7 @@ A successful order will have zero or one <strong>make</strong> and/or zero or mo
 <aside class="notice">
   IMPORTANT: After calling this endpoint, the Broadcast Order endpoint has to be called for the order to be executed.
 </aside>
-<h3 id='http-request-13'>HTTP Request</h3>
+<h3 id='http-request-12'>HTTP Request</h3>
 <p><code>POST /v2/orders</code></p>
 <h3 id='request-parameters-11'>Request Parameters</h3>
 <p>For the below descriptions, the <code>order maker</code> refers to your API user.</p>
@@ -1873,7 +1861,7 @@ After using the <a href="#create-order">Create Order</a> endpoint, you will rece
 </code></pre>
 <p>Every <code>txn</code> of the <code>fills</code> and <code>makes</code> in the Create Order response should be <a href="#authentication">signed</a>,
 and structured in the <code>signatures</code> format shown on the right.</p>
-<h3 id='http-request-14'>HTTP Request</h3>
+<h3 id='http-request-13'>HTTP Request</h3>
 <p><code>POST /v2/orders/:id/broadcast</code></p>
 <h3 id='request-parameters-12'>Request Parameters</h3>
 <blockquote>
@@ -1945,7 +1933,7 @@ Only orders <strong>with makes</strong> and with an <code>available_amount</code
 <aside class="notice">
   IMPORTANT: After calling this endpoint, the Execute Cancellation endpoint has to be called for the cancellation to be executed.
 </aside>
-<h3 id='http-request-15'>HTTP Request</h3>
+<h3 id='http-request-14'>HTTP Request</h3>
 <p><code>POST /v2/cancellations</code></p>
 <h3 id='url-parameters'>URL Parameters</h3>
 <blockquote>
@@ -2056,7 +2044,7 @@ a transaction in the response which must be signed.</p>
 <pre class="highlight javascript"><code><span class="p">{</span>
   <span class="s2">"signature"</span><span class="p">:</span> <span class="s2">"&lt;signature&gt;"</span>
 <span class="p">}</span>
-</code></pre><h3 id='http-request-16'>HTTP Request</h3>
+</code></pre><h3 id='http-request-15'>HTTP Request</h3>
 <p><code>POST /v2/cancellations/:id/broadcast</code></p>
 <h3 id='url-parameters-2'>URL Parameters</h3>
 <table><thead>
@@ -2183,7 +2171,7 @@ and the decimal point itself should be dropped.</p>
 <span class="p">}</span>
 </code></pre>
 <p>List contract balances of the given address and contract.</p>
-<h3 id='http-request-17'>HTTP Request</h3>
+<h3 id='http-request-16'>HTTP Request</h3>
 <p><code>/v2/balances</code></p>
 <h3 id='url-parameters-3'>URL parameters</h3>
 <table><thead>
@@ -2319,6 +2307,23 @@ and the decimal point itself should be dropped.</p>
 <td>78e6d16b914fe15bc16150aeb11d0c2a8e532bdd</td>
 </tr>
 </tbody></table>
+<h1 id='contracts'>Contracts</h1><h2 id='list-contracts'>List contracts</h2>
+<blockquote>
+<p>Example response</p>
+</blockquote>
+<pre class="highlight javascript"><code><span class="p">{</span>
+  <span class="s2">"NEO"</span><span class="p">:</span>
+  <span class="p">{</span>
+    <span class="s2">"V1"</span><span class="p">:</span> <span class="s2">"0ec5712e0f7c63e4b0fea31029a28cea5e9d551f"</span><span class="p">,</span>
+    <span class="s2">"V1_5"</span><span class="p">:</span> <span class="s2">"c41d8b0c30252ce7e8b6d95e9ce13fdd68d2a5a8"</span><span class="p">,</span>
+    <span class="s2">"V2"</span><span class="p">:</span> <span class="s2">"48756743d524af03aa75729e911651ffd3cbe7d8"</span>
+  <span class="p">}</span>
+<span class="p">}</span>
+
+</code></pre>
+<p>Returns updated hashes of contracts deployed by Switcheo.</p>
+<h3 id='http-request-17'>HTTP Request</h3>
+<p><code>GET /v2/tickers/contracts</code></p>
 <h1 id='errors'>Errors</h1>
 <p>The Switcheo API uses the following error codes:</p>
 
