publish: Fix broken link
generated from commit 8b81dcda140ab0459d070cf89aa38c3414131575

--- a/index.html
+++ b/index.html
@@ -579,7 +579,7 @@ Authentication is not required for these endpoints.</p>
 <td>pair</td>
 <td><strong>string</strong></td>
 <td>yes</td>
-<td>Only show chart data of this <a href="#currency-pairs">trading pair</a></td>
+<td>Only show chart data of this <a href="#pairs">trading pair</a></td>
 </tr>
 <tr>
 <td>start_time</td>
