--- a/index.html
+++ b/index.html
@@ -533,7 +533,7 @@ Authentication is not required for these endpoints.</p>
 <pre class="highlight javascript"><code><span class="p">{</span>
   <span class="s2">"pair"</span><span class="p">:</span> <span class="s2">"SWTH_NEO"</span><span class="p">,</span>
   <span class="s2">"interval"</span><span class="p">:</span> <span class="mi">1</span><span class="p">,</span>
-  <span class="s2">"star_time"</span><span class="p">:</span> <span class="mi">1531213200</span><span class="p">,</span>
+  <span class="s2">"start_time"</span><span class="p">:</span> <span class="mi">1531213200</span><span class="p">,</span>
   <span class="s2">"end_time"</span><span class="p">:</span> <span class="mi">1531220400</span>
 <span class="p">}</span>
 </code></pre>
