publish: Add slack channel link to docs
generated from commit 187ace2137be0123ec02e2369cec7ccd90ad5b39

--- a/index.html
+++ b/index.html
@@ -391,6 +391,8 @@ Switcheo Exchange programatically.</p>
 
 <p>Before you proceed with the API documentation, be sure to explore Switcheo Exchange at
 <a href="https://switcheo.exchange">https://switcheo.exchange</a>.</p>
+
+<p>If you have technical questions, you can ask them at our <a href="https://join.slack.com/t/switcheonetwork/shared_invite/enQtNDAyMTQ3Mzg3NjA1LTc0ODBlMWMxMjRkNTE5ZjkzN2VkNDNhYjQ2MjFlZTUwMzQ3NGMxYzZlODM5ZTAwZTcxMWM2YjA5MTAyN2FkYmI">slack channel</a>.</p>
 <h2 id='api-requests'>API Requests</h2>
 <p>The Switcheo API uses <a href="https://en.wikipedia.org/wiki/Representational_state_transfer">REST</a> architecture.
 API requests and responses use the <a href="https://www.json.org/">JSON</a> format.</p>
